[project]
name = "mae"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "absl-py>=2.2.2",
    "asttokens>=3.0.0",
    "backcall>=0.2.0",
    "brotli>=1.1.0",
    "cachetools>=5.5.2",
    "certifi>=2025.1.31",
    "charset-normalizer>=3.4.1",
    "cloudpickle>=3.1.1",
    "comm>=0.2.2",
    "contourpy>=1.1.1",
    "cycler>=0.12.1",
    "debugpy>=1.8.14",
    "decorator>=5.2.1",
    "executing>=2.2.0",
    "filelock>=3.16.1",
    "fonttools>=4.57.0",
    "fsspec>=2025.3.0",
    "gmpy2>=2.2.1",
    "google-auth>=2.39.0",
    "google-auth-oauthlib>=1.0.0",
    "grpcio>=1.70.0",
    "huggingface-hub>=0.30.2",
    "idna>=3.10",
    "importlib-metadata>=8.5.0",
    "importlib-resources>=6.4.5",
    "ipykernel>=6.29.5",
    "ipython>=8.12.3",
    "jedi>=0.19.2",
    "jinja2>=3.1.6",
    "jupyter-client>=8.6.3",
    "jupyter-core>=5.7.2",
    "kiwisolver>=1.4.7",
    "markdown>=3.7",
    "markupsafe>=2.1.5",
    "matplotlib>=3.7.5",
    "matplotlib-inline>=0.1.7",
    "mkl-fft>=1.3.6",
    "mkl-random>=1.2.2",
    "mkl-service>=2.4.0",
    "mpmath>=1.3.0",
    "nest-asyncio>=1.6.0",
    "networkx>=3.1",
    "numpy>=1.24.4",
    "nvidia-cublas-cu12>=12.8.4.1",
    "nvidia-cuda-cupti-cu12>=12.8.90",
    "nvidia-cuda-nvrtc-cu12>=12.8.93",
    "nvidia-cuda-runtime-cu12>=12.8.90",
    "nvidia-cudnn-cu12>=9.8.0.87",
    "nvidia-cufft-cu12>=11.3.3.83",
    "nvidia-curand-cu12>=10.3.9.90",
    "nvidia-cusolver-cu12>=11.7.3.90",
    "nvidia-cusparse-cu12>=12.5.8.93",
    "nvidia-nccl-cu12>=2.26.2.post1",
    "nvidia-nvjitlink-cu12>=12.8.93",
    "nvidia-nvtx-cu12>=12.8.90",
    "oauthlib>=3.2.2",
    "packaging>=24.2",
    "parso>=0.8.4",
    "pexpect>=4.9.0",
    "pickleshare>=0.7.5",
    "pillow>=10.4.0",
    "pip>=25.0.1",
    "platformdirs>=4.3.6",
    "prompt-toolkit>=3.0.51",
    "protobuf>=5.29.4",
    "psutil>=7.0.0",
    "ptyprocess>=0.7.0",
    "pure-eval>=0.2.3",
    "pyasn1>=0.6.1",
    "pyasn1-modules>=0.4.2",
    "pygments>=2.19.1",
    "pyparsing>=3.1.4",
    "pysocks>=1.7.1",
    "python-dateutil>=2.9.0.post0",
    "pyyaml>=6.0.2",
    "pyzmq>=26.4.0",
    "requests>=2.32.3",
    "requests-oauthlib>=2.0.0",
    "rsa>=4.9.1",
    "safetensors>=0.5.3",
    "setuptools>=75.3.2",
    "six>=1.17.0",
    "stack-data>=0.6.3",
    "submitit>=1.5.2",
    "sympy>=1.13.3",
    "tensorboard>=2.14.0",
    "tensorboard-data-server>=0.7.2",
    "timm>=1.0.15",
    "torch>=2.0.1",
    "torchaudio>=2.0.2",
    "torchvision>=0.15.2",
    "tornado>=6.4.2",
    "tqdm>=4.67.1",
    "traitlets>=5.14.3",
    "triton>=2.0.0",
    "typing-extensions>=4.13.2",
    "urllib3>=2.2.3",
    "wcwidth>=0.2.13",
    "werkzeug>=3.0.6",
    "wheel>=0.45.1",
    "zipp>=3.20.2",
]
